--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ defmt = "1.0.1"
 defmt-rtt = "1.1.0"
 panic-probe = { version = "1.0.0", features = ["print-defmt"] }
 
-rp-pico = "0.9.0"
+stm32f4xx-hal = { version = "0.23.0", features = ["stm32f401"] }
 
 [profile.dev]
 codegen-units = 1
